article.html done

--- a/home.html
+++ b/home.html
@@ -16,9 +16,9 @@
         <hr style="border: 1px solid black;">
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="">Gallery</a></li>
-                <li><a href="">Article</a></li>
+                <li><a href="article.html">Article</a></li>
             </ul>
         </nav>
         <hr style="border: 1px solid black;">
