--- a/article.html
+++ b/article.html
@@ -5,10 +5,90 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Article</h1>
+    <header>
+        <h1>Daily Journal</h1>
+        <p>Ini adalah catatan milik Ferdynand Ergy Pramudani yang sekarang sedang menempuh pendidikan untuk mendapatkan
+            gelar sarjana pada progam studi Teknik Informatika, Universitas Dian Nuswantoro</p>
+        <hr style="border: 1px solid black;">
+        <nav>
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="">Gallery</a></li>
+                <li><a href="article.html">Article</a></li>
+            </ul>
+        </nav>
+        <hr style="border: 1px solid black;">
+    </header>
+    <main>
+        <article style="width: 95%;">
+            <div style="text-align: center;">
+                <h3>Article</h3>
+            </div>
+            <ol>
+                <li>
+                    <h3>Jumat, 4 Oktober 2024</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea quos unde ratione alias sed. Vitae
+                        aperiam quas reiciendis culpa alias qui amet soluta, doloribus excepturi. Iure exercitationem
+                        consequatur similique possimus voluptates minus quis quos repudiandae eius molestiae eveniet
+                        distinctio maiores voluptas officiis et ea quod explicabo sed tempore, vel voluptatum?</p>
+                </li>
+                <li>
+                    <h3>Jumat, 5 Oktober 2024</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime ex, numquam repellat sapiente
+                        officiis architecto quo autem laboriosam rem laudantium voluptates eaque, quibusdam nulla
+                        impedit facere obcaecati saepe totam doloribus perspiciatis ipsum sunt itaque, rerum adipisci
+                        eligendi? Recusandae impedit, amet nesciunt, natus ab explicabo odit dignissimos ipsa facere
+                        commodi blanditiis?</p>
+                </li>
+                <li>
+                    <h3>Jumat, 6 Oktober 2024</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis deleniti quaerat similique
+                        officiis! Dolorum, culpa ducimus molestiae voluptas repellendus deserunt inventore cupiditate
+                        laboriosam ab magnam quae aspernatur consequatur iusto iste modi, error adipisci facere possimus
+                        perspiciatis nobis est ad voluptates officiis ipsa? Rem totam ratione deserunt eum impedit
+                        quidem culpa?
+                    </p>
+                </li>
+
+                <li>
+                    <h3>Jumat, 7 Oktober 2024</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis deleniti quaerat similique
+                        officiis! Dolorum, culpa ducimus molestiae voluptas repellendus deserunt inventore cupiditate
+                        laboriosam ab magnam quae aspernatur consequatur iusto iste modi, error adipisci facere possimus
+                        perspiciatis nobis est ad voluptates officiis ipsa? Rem totam ratione deserunt eum impedit
+                        quidem culpa?
+                    </p>
+                </li>
+
+                <li>
+                    <h3>Jumat, 8 Oktober 2024</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis deleniti quaerat similique
+                        officiis! Dolorum, culpa ducimus molestiae voluptas repellendus deserunt inventore cupiditate
+                        laboriosam ab magnam quae aspernatur consequatur iusto iste modi, error adipisci facere possimus
+                        perspiciatis nobis est ad voluptates officiis ipsa? Rem totam ratione deserunt eum impedit
+                        quidem culpa?
+                    </p>
+                </li>
+
+                <li>
+                    <h3>Jumat, 9 Oktober 2024</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis deleniti quaerat similique
+                        officiis! Dolorum, culpa ducimus molestiae voluptas repellendus deserunt inventore cupiditate
+                        laboriosam ab magnam quae aspernatur consequatur iusto iste modi, error adipisci facere possimus
+                        perspiciatis nobis est ad voluptates officiis ipsa? Rem totam ratione deserunt eum impedit
+                        quidem culpa?
+                    </p>
+                </li>
+
+            </ol>
+        </article>
+    </main>
+    <hr style="border: 1px solid black;">
+    <h3 style="margin-left: 20px;">Semarang 2024</h3>
 </body>
 
 </html>
