--- a/article.html
+++ b/article.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
-                <li><a href="">Gallery</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="article.html">Article</a></li>
             </ul>
         </nav>
@@ -87,7 +87,7 @@
             </ol>
         </article>
     </main>
-    <hr style="border: 1px solid black;">
+    <hr style="border: 1px solid black; margin-top: 30px;">
     <h3 style="margin-left: 20px;">Semarang 2024</h3>
 </body>
 
